# Board library for zl41arm
# Static library: stm32f411ed_boot

platform_includes = include_directories('include')

platform_srcs = files(
	'platform_startup.cpp',
    'dts.cpp'
)

#stm32f411ed_boot = declare_dependency(
#	link_whole : static_library('stm32f411ed_boot',
#		_srcs,
#		include_directories : _include,
#		dependencies : [libisix, libperiph, _config],
#	),
# include_directories : _include,
#)

